populated energy balance subsections

--- a/notebooks/energy_balance_model_and_feedbacks.ipynb
+++ b/notebooks/energy_balance_model_and_feedbacks.ipynb
@@ -17,9 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Energy balance model and feedbacks\n",
-    "\n",
-    "Next, title your notebook appropriately with a top-level Markdown header, `#`. Do not use this level header anywhere else in the notebook. Our book build process will use this title in the navbar, table of contents, etc. Keep it short, keep it descriptive. Follow this with a `---` cell to visually distinguish the transition to the prerequisites section."
+    "# Energy Balance Model and Feedbacks"
    ]
   },
   {
@@ -34,13 +32,13 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "If you have an introductory paragraph, lead with it here! Keep it short and tied to your material, then be sure to continue into the required list of topics below,\n",
     "\n",
-    "1. This is a numbered list of the specific topics\n",
-    "1. These should map approximately to your main sections of content\n",
-    "1. Or each second-level, `##`, header in your notebook\n",
-    "1. Keep the size and scope of your notebook in check\n",
-    "1. And be sure to let the reader know up front the important concepts they'll be leaving with"
+    "This tutorial focuses on introducing the fundamental concepts of the energy balance model and radiative feedback, and establish notations and definitions for the rest of the cookbook. \n",
+    "\n",
+    "The following topics will be covered in this tutorial: \n",
+    "1. The Energy Balance Model \n",
+    "2. What is Radative Feedback \n",
+    "3. Methods to Calculate Radiative Feedback"
    ]
   },
   {
@@ -49,8 +47,6 @@
    "source": [
     "## Prerequisites\n",
     "This section was inspired by [this template](https://github.com/alan-turing-institute/the-turing-way/blob/master/book/templates/chapter-template/chapter-landing-page.md) of the wonderful [The Turing Way](https://the-turing-way.netlify.app) Jupyter Book.\n",
-    "\n",
-    "Following your overview, tell your reader what concepts, packages, or other background information they'll **need** before learning your material. Tie this explicitly with links to other pages here in Foundations or to relevant external resources. Remove this body text, then populate the Markdown table, denoted in this cell with `|` vertical brackets, below, and fill out the information following. In this table, lay out prerequisite concepts by explicitly linking to other Foundations material or external resources, or describe generally helpful concepts.\n",
     "\n",
     "Label the importance of each concept explicitly as **helpful/necessary**.\n",
     "\n",
@@ -79,7 +75,90 @@
    "metadata": {},
    "source": [
     "## Imports\n",
-    "Begin your body of content with another `---` divider before continuing into this section, then remove this body text and populate the following code cell with all necessary Python imports **up-front**:"
+    "We will import commonly used scientific Python packages for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import xarray as xr \n",
+    "import matplotlib as plt \n",
+    "import "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Energy Balance Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagine a scenario where we start off with an energy-balanced Earth, where at TOA flux downward to Earth's surface is equal to the TOA flux going out to space. Now if we double the concentration levels of carbon dioxide in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. Processes can amplify or dampen the climate response, \n",
+    "\n",
+    "the system will respond to the change in different ways. For example, there will be more CO2 molecules from the CO2-doubling absorbing the outgoing longwave radiation and thus end up warming the planet; or there are \n",
+    "\n",
+    "effective radiative forcing is the doubling of carbon dioxide. When we first "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The planetary energy balance is typically appoximated at the top of the atmosphere (TOA) by the following: \n",
+    "\\begin{equation*}\n",
+    " R = F + \\lambda T\n",
+    "\\end{equation*}\n",
+    "\n",
+    "where R is the net TOA flux anomaly (positive downward), F is the effective radiative forcing, $\\lambda$ is the feedback parameter, and T is the global mean surface temperature anomaly. \n",
+    "\n",
+    "\n",
+    "At equilibrium, R = 0. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radiative Feedback \n",
+    "\n",
+    "Feedbacks are listed following [Sherwood et al. 2020](https://doi.org/10.1029/2019RG000678) and [Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1), which are limited to feedbacks that directly affect the top-of-the-atmosphere (TOA) radiation budget, and respond to surface temperature mostly through physical processes\n",
+    "\n",
+    "How Are Feedbacks Defined? - see Hansen et al. 1984 and Appendix A of Bony et al. 2006\n",
+    "\n",
+    "\n",
+    "Make plots for each feedback to see how changes in T affects the feedback."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Planck Feedback \n",
+    "\n",
+    "Planck feedback is the temperature dependence of longwave emission through Stefan-Boltzmann law, assuming . \n",
+    "\\begin{equation*}\n",
+    " -4\\sigma T^3 = \n",
+    "\\end{equation*}\n",
+    "\n",
+    "The more you heat, the more they go out.\n",
+    "\n",
+    "Extended Read: Planck feedback not necessarily accurately represented in climate models due to lack of stratospheric warming. \n",
+    "https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003729"
    ]
   },
   {
@@ -88,21 +167,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys"
+    "T = \n",
+    "sigma = \n",
+    "planck = \n",
+    "\n",
+    "plt.plot "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your first content section"
+    "### 2. Surface Albedo Feedback"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where you begin your first section of material, loosely tied to your objectives stated up front. Tie together your notebook as a narrative, with interspersed Markdown text, images, and more as necessary,"
+    "### 3. Water Vapor Feedback + Lapse Rate Feedback"
    ]
   },
   {
@@ -110,95 +193,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# as well as any and all of your code cells\n",
-    "print(\"Hello world!\")"
+    "### 4. Cloud Feedback "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A content subsection\n",
-    "Divide and conquer your objectives with Markdown subsections, which will populate the helpful navbar in Jupyter Lab and here on the Jupyter Book!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# some subsection code\n",
-    "new = \"helpful information\""
+    "### 5. Stratospheric Feedback "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another content subsection\n",
-    "Keep up the good work! A note, *try to avoid using code comments as narrative*, and instead let them only exist as brief clarifications where necessary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Your second content section\n",
-    "Here we can move on to our second objective, and we can demonstrate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Subsection to the second section\n",
-    "\n",
-    "#### a quick demonstration\n",
-    "\n",
-    "##### of further and further\n",
-    "\n",
-    "###### header levels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "as well $m = a * t / h$ text! Similarly, you have access to other $\\LaTeX$ equation [**functionality**](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Typesetting%20Equations.html) via MathJax (demo below from link),\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\dot{x} & = \\sigma(y-x) \\\\\n",
-    "\\dot{y} & = \\rho x - y - xz \\\\\n",
-    "\\dot{z} & = -\\beta z + xy\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check out [**any number of helpful Markdown resources**](https://www.markdownguide.org/basic-syntax/) for further customizing your notebooks and the [**Jupyter docs**](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html) for Jupyter-specific formatting information. Don't hesitate to ask questions if you have problems getting it to look *just right*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Last Section\n",
-    "\n",
-    "If you're comfortable, and as we briefly used for our embedded logo up top, you can embed raw html into Jupyter Markdown cells (edit to see):"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"admonition alert alert-info\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
-    "    Your relevant information here!\n",
-    "</div>"
+    "## Methods to Calculate Raditaive Feedback "
    ]
   },
   {
@@ -276,6 +291,17 @@
     " - Only include what you're legally allowed: **no copyright infringement or plagiarism**\n",
     " \n",
     "Thank you for your contribution!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "References: \n",
+    "- Bony et al. 2006 https://journals.ametsoc.org/view/journals/clim/19/15/jcli3819.1.xml\n",
+    "- Zenlinka et al. 2020\n",
+    "- Sherwood et al. 2020\n",
+    "- "
    ]
   }
  ],
