--- a/notebooks/kernel-analysis.ipynb
+++ b/notebooks/kernel-analysis.ipynb
@@ -98,7 +98,7 @@
     "- SW CRE: Net SW radiation at TOA (down `rsdt` minus up `rsut`) and clear-sky versions (down, which is the same, minus up `rsutcs`)\n",
     "- LW CRE: Net LW radiation at TOA (`rlut`) and the clear-sky version (`rlutcs`)\n",
     "\n",
-    "The cloud feedbacks also require the results from the other feedbacks to correct for non-cloud contributions to the CREs."
+    "The cloud feedbacks also require the results from the other feedbacks to correct for noncloud contributions to the CREs."
    ]
   },
   {
@@ -219,28 +219,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ctrl_state = ctrl.sel(time=slice('1100', '1200')).mean(dim='time')\n",
+    "pert_state = pert.sel(time=slice('0899', '0999')).mean(dim='time')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ctrl_SWCRE = (-ctrl_state.rsut + ctrl_state.rsutcs)\n",
+    "pert_SWCRE = (-pert_state.rsut + pert_state.rsutcs)\n",
+    "dCRE = pert_SWCRE - ctrl_SWCRE"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "dCRE.plot()"
+   ]
   },
   {
    "cell_type": "code",
@@ -327,11 +329,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Net"
+   ]
   },
   {
    "cell_type": "code",
