Rename and add to toc

--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -4,22 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start here! If you can directly link to an image relevant to your notebook, such as [canonical logos](https://github.com/numpy/numpy/blob/main/doc/source/_static/numpylogo.svg), do so here at the top of your notebook. You can do this with Markdown syntax,\n",
-    "\n",
-    "> `![<image title>](http://link.com/to/image.png \"image alt text\")`\n",
-    "\n",
-    "or edit this cell to see raw HTML `img` demonstration. This is preferred if you need to shrink your embedded image. **Either way be sure to include `alt` text for any embedded images to make your content more accessible.**\n",
-    "\n",
-    "<img src=\"images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
+    "<img src=\"../images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manual Feedback Calculations Using Radiative Kernels\n",
-    "\n",
-    "Next, title your notebook appropriately with a top-level Markdown header, `#`. Do not use this level header anywhere else in the notebook. Our book build process will use this title in the navbar, table of contents, etc. Keep it short, keep it descriptive. Follow this with a `---` cell to visually distinguish the transition to the prerequisites section."
+    "# Feedback analysis using radiative kernels"
    ]
   },
   {
@@ -34,13 +26,8 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "If you have an introductory paragraph, lead with it here! Keep it short and tied to your material, then be sure to continue into the required list of topics below,\n",
     "\n",
-    "1. This is a numbered list of the specific topics\n",
-    "1. These should map approximately to your main sections of content\n",
-    "1. Or each second-level, `##`, header in your notebook\n",
-    "1. Keep the size and scope of your notebook in check\n",
-    "1. And be sure to let the reader know up front the important concepts they'll be leaving with"
+    "This notebook details all of the steps required to perform a radiative kernel analysis."
    ]
   },
   {
@@ -48,23 +35,13 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "This section was inspired by [this template](https://github.com/alan-turing-institute/the-turing-way/blob/master/book/templates/chapter-template/chapter-landing-page.md) of the wonderful [The Turing Way](https://the-turing-way.netlify.app) Jupyter Book.\n",
-    "\n",
-    "Following your overview, tell your reader what concepts, packages, or other background information they'll **need** before learning your material. Tie this explicitly with links to other pages here in Foundations or to relevant external resources. Remove this body text, then populate the Markdown table, denoted in this cell with `|` vertical brackets, below, and fill out the information following. In this table, lay out prerequisite concepts by explicitly linking to other Foundations material or external resources, or describe generally helpful concepts.\n",
-    "\n",
-    "Label the importance of each concept explicitly as **helpful/necessary**.\n",
     "\n",
     "| Concepts | Importance | Notes |\n",
     "| --- | --- | --- |\n",
-    "| [Intro to Cartopy](https://foundations.projectpythia.org/core/cartopy/cartopy.html) | Necessary | |\n",
-    "| [Understanding of NetCDF](https://foundations.projectpythia.org/core/data-formats/netcdf-cf.html) | Helpful | Familiarity with metadata structure |\n",
-    "| Project management | Helpful | |\n",
+    "| Loading CMIP6 data | Necessary | |\n",
+    "| [Intro to Xarray](https://foundations.projectpythia.org/core/xarray/xarray-intro.html) | Necessary |  |\n",
     "\n",
-    "- **Time to learn**: estimate in minutes. For a rough idea, use 5 mins per subsection, 10 if longer; add these up for a total. Safer to round up and overestimate.\n",
-    "- **System requirements**:\n",
-    "    - Populate with any system, version, or non-Python software requirements if necessary\n",
-    "    - Otherwise use the concepts table above and the Imports section below to describe required packages as necessary\n",
-    "    - If no extra requirements, remove the **System requirements** point altogether"
+    "- **Time to learn**: 60 minutes"
    ]
   },
   {
@@ -78,8 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports\n",
-    "Begin your body of content with another `---` divider before continuing into this section, then remove this body text and populate the following code cell with all necessary Python imports **up-front**:"
+    "## Imports"
    ]
   },
   {
@@ -88,21 +64,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys"
+    "import xarray as xr\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import intake"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your first content section"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is where you begin your first section of material, loosely tied to your objectives stated up front. Tie together your notebook as a narrative, with interspersed Markdown text, images, and more as necessary,"
+    "## Load in required data"
    ]
   },
   {
@@ -111,16 +83,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# as well as any and all of your code cells\n",
-    "print(\"Hello world!\")"
+    "cat_url = 'https://storage.googleapis.com/cmip6/pangeo-cmip6.json'\n",
+    "col = intake.open_esm_datastore(cat_url)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A content subsection\n",
-    "Divide and conquer your objectives with Markdown subsections, which will populate the helpful navbar in Jupyter Lab and here on the Jupyter Book!"
+    "The fields (and CMIP names) required to calculate each feedback are:\n",
+    "- Albedo: upwelling and downwelling SW radiation at the surface (`rsus` and `rsds`)\n",
+    "- Temperature (Planck and lapse rate): air temperature (`ta`) and surface temperature (`ts`)\n",
+    "- Water vapor: specific humidity (`hus`) and air temperature\n",
+    "- SW CRE: Net SW radiation at TOA (down `rsdt` minus up `rsut`) and clear-sky versions (down, which is the same, minus up `rsutcs`)\n",
+    "- LW CRE: Net LW radiation at TOA (`rlut`) and the clear-sky version (`rlutcs`)\n",
+    "\n",
+    "The cloud feedbacks also require the results from the other feedbacks to correct for noncloud contributions to the CREs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "cat = col.search(activity_id='CMIP', experiment_id=['piControl', 'abrupt-4xCO2'], table_id='Amon', source_id='CESM2', \n",
+    "                 variable_id=['rsus', 'rsds', 'ta', 'ts', 'hus', 'rsdt', 'rsut', 'rsutcs', 'rlut', 'rlutcs'])\n",
+    "cat.df"
    ]
   },
   {
@@ -129,121 +120,248 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some subsection code\n",
-    "new = \"helpful information\""
+    "dset_dict = cat.to_dataset_dict(zarr_kwargs={'consolidated': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl = dset_dict['CMIP.NCAR.CESM2.piControl.Amon.gn']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pert = dset_dict['CMIP.NCAR.CESM2.abrupt-4xCO2.Amon.gn']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pert"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another content subsection\n",
-    "Keep up the good work! A note, *try to avoid using code comments as narrative*, and instead let them only exist as brief clarifications where necessary."
+    "## Prepare data for analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def global_average(data):\n",
+    "    weights = np.cos(np.deg2rad(data.lat))\n",
+    "    data_weighted = data.weighted(weights)\n",
+    "    return data_weighted.mean(dim=['lat', 'lon'], skipna=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmst_ctrl = global_average(ctrl.ts.rolling(time=12, center=True).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmst_ctrl.sel(time=slice('0001', '0101')).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmst_pert = global_average(pert.ts.rolling(time=12, center=True).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmst_pert.sel(time=slice('0001', '0101')).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl_state = ctrl.sel(time=slice('1100', '1200')).mean(dim='time')\n",
+    "pert_state = pert.sel(time=slice('0899', '0999')).mean(dim='time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl_SWCRE = (-ctrl_state.rsut + ctrl_state.rsutcs)\n",
+    "pert_SWCRE = (-pert_state.rsut + pert_state.rsutcs)\n",
+    "dCRE = pert_SWCRE - ctrl_SWCRE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dCRE.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate feedbacks"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your second content section\n",
-    "Here we can move on to our second objective, and we can demonstrate"
+    "### Albedo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subsection to the second section\n",
-    "\n",
-    "#### a quick demonstration\n",
-    "\n",
-    "##### of further and further\n",
-    "\n",
-    "###### header levels"
+    "### Temperature"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "as well $m = a * t / h$ text! Similarly, you have access to other $\\LaTeX$ equation [**functionality**](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Typesetting%20Equations.html) via MathJax (demo below from link),\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\dot{x} & = \\sigma(y-x) \\\\\n",
-    "\\dot{y} & = \\rho x - y - xz \\\\\n",
-    "\\dot{z} & = -\\beta z + xy\n",
-    "\\end{align}"
+    "#### Planck"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out [**any number of helpful Markdown resources**](https://www.markdownguide.org/basic-syntax/) for further customizing your notebooks and the [**Jupyter docs**](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html) for Jupyter-specific formatting information. Don't hesitate to ask questions if you have problems getting it to look *just right*."
+    "#### Lapse rate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Last Section\n",
-    "\n",
-    "If you're comfortable, and as we briefly used for our embedded logo up top, you can embed raw html into Jupyter Markdown cells (edit to see):"
+    "### Water vapor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"admonition alert alert-info\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
-    "    Your relevant information here!\n",
-    "</div>"
+    "#### Shortwave water vapor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feel free to copy this around and edit or play around with yourself. Some other `admonitions` you can put in:"
+    "#### Longwave water vapor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"admonition alert alert-success\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Success</p>\n",
-    "    We got this done after all!\n",
-    "</div>"
+    "### Cloud"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"admonition alert alert-warning\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Warning</p>\n",
-    "    Be careful!\n",
-    "</div>"
+    "#### Cloud radiative effect (CRE)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"admonition alert alert-danger\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Danger</p>\n",
-    "    Scary stuff be here.\n",
-    "</div>"
+    "#### Cloud feedback adjustments"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also suggest checking out Jupyter Book's [brief demonstration](https://jupyterbook.org/content/metadata.html#jupyter-cell-tags) on adding cell tags to your cells in Jupyter Notebook, Lab, or manually. Using these cell tags can allow you to [customize](https://jupyterbook.org/interactive/hiding.html) how your code content is displayed and even [demonstrate errors](https://jupyterbook.org/content/execute.html#dealing-with-code-that-raises-errors) without altogether crashing our loyal army of machines!"
+    "### Net"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
