updated energy balance model notebook

--- a/notebooks/energy_balance_model_and_feedbacks.ipynb
+++ b/notebooks/energy_balance_model_and_feedbacks.ipynb
@@ -4,12 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start here! If you can directly link to an image relevant to your notebook, such as [canonical logos](https://github.com/numpy/numpy/blob/main/doc/source/_static/numpylogo.svg), do so here at the top of your notebook. You can do this with Markdown syntax,\n",
-    "\n",
-    "> `![<image title>](http://link.com/to/image.png \"image alt text\")`\n",
-    "\n",
-    "or edit this cell to see raw HTML `img` demonstration. This is preferred if you need to shrink your embedded image. **Either way be sure to include `alt` text for any embedded images to make your content more accessible.**\n",
-    "\n",
     "<img src=\"images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
    ]
   },
@@ -46,21 +40,13 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "This section was inspired by [this template](https://github.com/alan-turing-institute/the-turing-way/blob/master/book/templates/chapter-template/chapter-landing-page.md) of the wonderful [The Turing Way](https://the-turing-way.netlify.app) Jupyter Book.\n",
-    "\n",
-    "Label the importance of each concept explicitly as **helpful/necessary**.\n",
     "\n",
     "| Concepts | Importance | Notes |\n",
     "| --- | --- | --- |\n",
-    "| [Intro to Cartopy](https://foundations.projectpythia.org/core/cartopy/cartopy.html) | Necessary | |\n",
-    "| [Understanding of NetCDF](https://foundations.projectpythia.org/core/data-formats/netcdf-cf.html) | Helpful | Familiarity with metadata structure |\n",
-    "| Project management | Helpful | |\n",
+    "| TBD | Necessary | |\n",
     "\n",
-    "- **Time to learn**: estimate in minutes. For a rough idea, use 5 mins per subsection, 10 if longer; add these up for a total. Safer to round up and overestimate.\n",
-    "- **System requirements**:\n",
-    "    - Populate with any system, version, or non-Python software requirements if necessary\n",
-    "    - Otherwise use the concepts table above and the Imports section below to describe required packages as necessary\n",
-    "    - If no extra requirements, remove the **System requirements** point altogether"
+    "\n",
+    "- **Time to learn**: 30 minutes?"
    ]
   },
   {
@@ -107,11 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine a scenario where we start off with an energy-balanced Earth, where at TOA flux downward to Earth's surface is equal to the TOA flux going out to space. Now if we double the concentration levels of carbon dioxide in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. Processes can amplify or dampen the climate response, \n",
-    "\n",
-    "the system will respond to the change in different ways. For example, there will be more CO2 molecules from the CO2-doubling absorbing the outgoing longwave radiation and thus end up warming the planet; or there are \n",
-    "\n",
-    "effective radiative forcing is the doubling of carbon dioxide. When we first "
+    "Imagine a scenario where we start off with an energy-balanced Earth, where at TOA flux downward to Earth's surface is equal to the TOA flux going out to space. Now if we double the concentration levels of carbon dioxide in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. Processes can amplify or dampen the climate response. "
    ]
   },
   {
@@ -149,7 +131,7 @@
    "source": [
     "### 1. Planck Feedback \n",
     "\n",
-    "Planck feedback is the temperature dependence of longwave emission through Stefan-Boltzmann law, assuming . \n",
+    "Planck feedback is the temperature dependence of longwave emission through Stefan-Boltzmann law, assuming $T_e$ is 255K based on Earth's average outgoing longwave radiation as 240 $Wm^{−2}$ (e.g., Loeb et al., 2018). \n",
     "\\begin{equation*}\n",
     " F = \\sigma T^4 \n",
     "\\end{equation*}\n",
@@ -212,9 +194,11 @@
     "\n",
     "Water vapor feedback and lapse rate feedback are commonly discussed together as they are both dependent on the how much water vapor is present in the atmosphere. \n",
     "\n",
-    "Based on the Clausius-Clapeyron relationship, an increase in atmospheric temperature increase the capacity of air to hold water molecules. The more it warm, the more water the atmosphere can hold and more \n",
+    "Water Vapor Feedback captures the change in outgoing LW and absorbed SW radiation at TOA due to the changes in the atmospheric water vapor concentration. Water droplets would absorb both longwave and shortwave radiation, and thus increase \n",
     "\n",
-    "[isert pic of capacity of jar increases as temperature increase]"
+    "\n",
+    "\n",
+    "[insert pic of capacity of jar increases as temperature increase]"
    ]
   },
   {
@@ -243,13 +227,6 @@
    "metadata": {},
    "source": [
     "## Methods to Calculate Raditaive Feedback "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Feel free to copy this around and edit or play around with yourself. Some other `admonitions` you can put in:"
    ]
   },
   {
@@ -330,7 +307,8 @@
     "- Bony et al. 2006 https://journals.ametsoc.org/view/journals/clim/19/15/jcli3819.1.xml\n",
     "- Zenlinka et al. 2020\n",
     "- Sherwood et al. 2020\n",
-    "- "
+    "\n",
+    "More to come"
    ]
   }
  ],
