--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -67,7 +67,10 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import intake"
+    "import intake\n",
+    "import s3fs\n",
+    "import fsspec\n",
+    "import glob"
    ]
   },
   {
@@ -75,6 +78,17 @@
    "metadata": {},
    "source": [
     "## Load in required data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Climate model output\n",
+    "\n",
+    "In this example, we will perform the analysis on a single model from the CMIP6 ensemble, CESM2. The simplest way to calculate feedbacks is to take differences between two climate states, as opposed to regressions. Here we use runs with:\n",
+    "- preindustrial conditions (`piControl`) as the control climate\n",
+    "- instantaneously quadrupled CO$_2$ (`abrupt-4xCO2`) as the perturbed climate"
    ]
   },
   {
@@ -163,7 +177,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Radiative kernels\n",
+    "\n",
+    "We will load in radiative kernels from Project Pythia's storage on JetStream2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = 'https://js2.jetstream-cloud.org:8001/'\n",
+    "path = f'pythia/ClimKern'\n",
+    "fs = fsspec.filesystem(\"s3\", anon=True, client_kwargs=dict(endpoint_url=URL))\n",
+    "patternKern = f's3://{path}/kernels/ERA5/*.nc'\n",
+    "patternTutorial = f's3://{path}/tutorial_data/*.nc'\n",
+    "filesKern = sorted(fs.glob(patternKern))\n",
+    "filesTutorial = sorted(fs.glob(patternTutorial))\n",
+    "filesetKern = [fs.open(file) for file in filesKern[0:2]]\n",
+    "filesetTutorial = [fs.open(file) for file in filesKern[0:2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataKern = xr.open_dataset(filesetKern[0])\n",
+    "dataKern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Prepare data for analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function for taking global averages:"
    ]
   },
   {
@@ -176,6 +240,13 @@
     "    weights = np.cos(np.deg2rad(data.lat))\n",
     "    data_weighted = data.weighted(weights)\n",
     "    return data_weighted.mean(dim=['lat', 'lon'], skipna=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get a general idea of how the climate changes in these runs, we can plot the global mean surface temperature for the two runs:"
    ]
   },
   {
@@ -215,6 +286,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideally, we would want to compare two equilibrated climates, but since that is usually not possible with standard-length CMIP experiments, we will simply take the average over the last 100 years available for each run:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -223,33 +301,6 @@
     "ctrl_state = ctrl.sel(time=slice('1100', '1200')).mean(dim='time')\n",
     "pert_state = pert.sel(time=slice('0899', '0999')).mean(dim='time')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ctrl_SWCRE = (-ctrl_state.rsut + ctrl_state.rsutcs)\n",
-    "pert_SWCRE = (-pert_state.rsut + pert_state.rsutcs)\n",
-    "dCRE = pert_SWCRE - ctrl_SWCRE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dCRE.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -322,6 +373,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl_SWCRE = (-ctrl_state.rsut + ctrl_state.rsutcs)\n",
+    "pert_SWCRE = (-pert_state.rsut + pert_state.rsutcs)\n",
+    "dSWCRE = pert_SWCRE - ctrl_SWCRE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSWCRE.plot()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,27 +405,6 @@
    "source": [
     "### Net"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
