fixed disappearing climkern logo

--- a/notebooks/simplified-calc/climkern-calc.ipynb
+++ b/notebooks/simplified-calc/climkern-calc.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/logos/ClimKern-logo.png\" width=250 alt=\"ClimKern Python Package Logo\"></img>"
+    "<img src=\"../images/logos/ClimKern-logo.png\" width=250 alt=\"ClimKern Python Package Logo\"></img>"
    ]
   },
   {
